<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">寻意新疆</string>
    <string name="request_address">http://lotusprize.com</string>
    <string name="copyright">湖南省工业设计协会版权所有\n中意工业设计（湖南）有限公司设计研发</string>
    <string name="init">正在初始化,请稍候.......</string>
	<string name="hometitle_text">艾尼瓦尔家的织毯生意</string>
	<string name="landscape">风景</string>
    <string name="landscape_desc">美不胜收的影像写真</string>
    <string name="humanity">人文</string>
    <string name="humanity_desc">生生不息的人文故事</string>
    <string name="story">物语</string>
    <string name="story_desc">从传统工艺到现代设计</string>
    <string name="community">社区</string>
    <string name="loading">加载中...</string>
    <string name="community_desc">社区互动与参与式创新</string>
    <string name="tks_unit_text">根据新疆党委书记张春贤的指示和应新疆科技厅的要求，湖南省工业设计协会联合新疆美克美家家具连锁有限公司、湖南大学设计艺术学院、新疆师范大学美术学院开展以新疆地域文化研究与旅游商品研发关键技术及应用示范的项目建设，以工业设计支持新疆地区特色文化产品的创新设计。2012年7月，43名志愿者行程5500公里，以喀什噶尔古城、伊犁新源恰勒阔迭村、吐鲁番吐峪沟为主要研究对象，通过非物质文化遗产影像记录、工业设计、环境设计、儿童美术教育等综合的（DS-CN）方法，完成了疆home+style项目总宣传片、儿童片、生土建筑片、手工艺片4条影片制作;访问非遗传承人6人，非遗传承项目11项，采编哈萨克族传统音乐15条，喀什民乐7条，喀什民歌6条，木卡姆选段3条；完成羊与骆驼陶艺雕塑、维族建筑积木、穹顶花伞等17款具有典型“疆”文化特色、面向国际市场、符合现代生活需要的文化旅游创意商品设计及制作打样;完成14款wallpaper设计、项目画册制作;在新疆新源县那拉提镇恰勒阔德村组织当地60名哈萨克族与回族小朋友进行美术培训，完成绘画、手工作品450余件，并在当地小学在举办”欢乐秀“活动。2013年1月20日，该项目在北京召开成果发布会，新浪网、搜狐网、潇湘晨报等35家媒体对此进行了报道</string>
</resources>
